tests/snapshots/integration__integration_tests__switch__switch_empty_refs_heads.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - refs/heads/
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    MOCK_CONFIG_DIR: "[MOCK_CONFIG_DIR]"
    PATH: "[PATH]"
    RUST_LOG: warn
    SHELL: ""
    SOURCE_DATE_EPOCH: "1735776000"
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m✗[39m [31mBranch [1mrefs/heads/[22m not found[39m
[2m↳[22m [2mTo create a new branch, run [90mwt switch refs/heads/ --create[39m; to list branches, run [90mwt list --branches --remotes[39m[22m
