tests/snapshots/integration__integration_tests__switch__switch_error_main_worktree_on_different_branch.snap
---
source: tests/integration_tests/switch.rs
assertion_line: 37
info:
  program: wt
  args:
    - "--internal"
    - switch
    - main
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[0m❌ [31mCannot create worktree for [1mmain[22m at [1m[REPO][22m: path occupied by worktree on [1mfeature[22m[39m

💡 [2mSwitch it back[22m
[107m [0m  cd [REPO] && git switch main
